--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
-  "version": 2
+  "headers": [
+    {
+      "source": "/tenders_enhanced.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ]
 }
 
