--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
+  "public": true,
   "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    },
     {
       "source": "/tenders_enhanced.json",
       "headers": [
